Fixed word wrap and removed truncate library

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -207,3 +207,11 @@ h1 {
 	-webkit-animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+
+.seeMore{
+  color:blue
+}
+
+.seeMore:hover {
+color:red
+}
